Apply prefix compression to searchSymbols only if we're not summarizing